Prevent text overflow in art box title

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,7 @@
     .art-title {
         text-align: center;
         padding: 0.7em;
+        overflow-wrap: break-word;
     }
     .art-by {
         text-align: center;
